style(Styles): :sparkles: styles and responsive  components(Card , filter, pagination and shop)
styles and responsive  components(Card , filter, pagination and shop)

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -44,6 +44,10 @@ $standard-color-yellow: rgba(252, 163, 17, 1);
 //TODO dimensions (px)
 $standard-with-full-hd: 1920px;
 $standard-heigth-full-hd: 1080px;
+$small-screen: 920px;
+$medium-screen: 1520px;
+
+
 $standard-border-radius: 10px;
 $standard-space-between-elements: 19px;
 
