--- a/client/src/styles/components/FilterBy/_filterBy.scss
+++ b/client/src/styles/components/FilterBy/_filterBy.scss
@@ -1,9 +1,15 @@
 .container-FilterBy {
   //background-color: royalblue;
-  height: 80px;
+  height: 15%;
   width: 95%;
   display: flex;
   flex-direction: column;
+  @media only screen and (max-width: $small-screen) {
+    //background-color: aqua;
+    gap: 10%;
+    font-size: 2vh;
+    width: 100%;
+  }
 
   .title {
     font-family: $standard-font-Barlow;
@@ -12,17 +18,31 @@
     position: relative;
     top: 10px;
     left: 20px;
+
+    @media only screen and (max-width: $medium-screen) {
+      
+    }
+    @media only screen and (max-width: $small-screen) {
+      margin: 5%;
+      color: red;
+    }
   }
 
   .container-filterBy-c {
-    height: 36px;
+    height: 3vw;
     border-radius: 40px;
-    background-color: $standard-color-blue-glass;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 5px;
+    background-color: $standard-color-blue-glass;
+
+    @media only screen and (max-width: $medium-screen) {
+      //background-color: aqua;
+    }
+
+    @media only screen and (max-width: $small-screen) {}
 
     .input-filterByName {
       width: 60%;
@@ -30,14 +50,22 @@
       font-weight: 300;
       color: $standard-color-white-background;
       border: none;
-      border-bottom: 1px solid $standard-color-white;
+      border-bottom: 1px solid $standard-color-blue-green;
       background-color: $standard-color-transparent;
       color: $standard-color-white-background;
 
+      //background-color:red;
+      @media only screen and (max-width: $medium-screen) {}
+
+      @media only screen and (max-width: $small-screen) {}
+
       &:focus {
-        border: none;
+        border: 0px;
         outline: none;
+        
       }
+
+      
     }
 
     .🔍 {
@@ -47,11 +75,11 @@
       background-color: $standard-color-transparent;
       border: none;
       scale: 1;
-      transition: background-color 0.4s scale 0.4s;
+      transition: all 0.6s;
 
       &:hover {
         //background-color: $standard-color-blue-solid-grad;
-        scale: 1.05;
+        scale: 1.3;
       }
     }
 
@@ -64,6 +92,11 @@
       background-color: $standard-color-transparent;
       color: $standard-color-white-background;
       text-align: center;
+      &:focus {
+        border: 0px;
+        outline: none;
+        
+      }
     }
 
     .⭐️ {
@@ -75,6 +108,8 @@
     .input-filterByPrice {
       width: 85%;
       height: auto;
+      background-color: aqua;
+      background-image: red;
     }
 
     .select-FilterByCategory {
@@ -87,7 +122,13 @@
       text-align: center;
       color: $standard-color-white-background;
       font-size: 20px;
-      width: fit-content;
+      width: 90%;
+
+      &:focus {
+        border: 0px;
+        outline: none;
+        
+      }
 
       .option {
         padding: 0 30px 0 10px;
@@ -123,18 +164,20 @@
       border: none;
       width: 24px;
       height: 24px;
-      margin: 3px;
+      margin: 4px;
       //background-color: blueviolet;
       font-size: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
+      transition: all 0.6s;
 
       &:hover {
-        margin: 0px;
-        width: 30px;
-        height: 30px;
+        scale:1.6;
+        //margin: 0px;
+        //width: 30px;
+        //height: 30px;
       }
     }
 
