--- a/client/src/styles/components/FilterList/_filterList.scss
+++ b/client/src/styles/components/FilterList/_filterList.scss
@@ -1,11 +1,10 @@
 .container-ItemFilterList {
+  
+  width: 100%;
+  height: 100%;
+  padding: 50px 30px;
   padding-right: 30px;
-  padding-top: 30px;
-  min-height: 45%;
-  width: 95%;
-  max-height: 400px;
-  height: 400px;
-  background-color: $standard-color-blue-glass;
+  background-color: $standard-color-transparent;
   //background-color: $standard-color-blue-green;
 
   border-radius: 16px;
@@ -13,5 +12,7 @@
   flex-direction: column;
   align-items: flex-end;
   flex-wrap: wrap;
+  position: relative;
+  bottom: 5%;
   gap: 10px;
 }
