--- a/client/src/styles/components/FilterPanel/_filterPanel.scss
+++ b/client/src/styles/components/FilterPanel/_filterPanel.scss
@@ -234,7 +234,7 @@
     }
   
     @media only screen and (max-width: $small-screen) {
-      background-color: red;
+      //background-color: red;
     }
   }
 }
