--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -242,6 +242,7 @@
 }
 
 .nav_responsive_MENU {
+  transition: all .5s ease-in;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -251,7 +252,43 @@
   width: 100%;
   position: absolute;
   z-index: 3;
-  top: 0;
+  bottom: 0%;
+  display: none;
+  
+
+  @media (max-width: 610px) {
+    display: flex;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  p {
+    color: white;
+    font-family: $standard-font-Poiret-One;
+    font-size: 30px;
+    margin: 30px;
+    cursor: pointer;
+
+    &:hover {
+      color: $standard-color-blue-green;
+    }
+  }
+}
+
+.nav_responsive_MENUClosed {
+  transition: all .5s ease-in;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $standard-color-blue;
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  z-index: 3;
+  bottom: 100%;
   display: none;
 
   @media (max-width: 610px) {
@@ -264,7 +301,7 @@
 
   p {
     color: white;
-    font-family: 'Roboto', sans-serif;
+    font-family: $standard-font-Poiret-One;
     font-size: 30px;
     margin: 30px;
     cursor: pointer;
@@ -274,4 +311,3 @@
     }
   }
 }
-
