--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -21,12 +21,12 @@ $standard-font-Satisfy: 'Satisfy', cursive;
 $standard-font-Hanken-Grotesk: 'Hanken Grotesk', sans-serif;
 $standard-font-IBM-Plex-Sans-Arabic: 'IBM Plex Sans Arabic', sans-serif;
 $standard-font-Lexend-Deca-sans-serif: 'Lexend Deca', sans-serif;
-$standard-font-Outfit-sans-serif :'Outfit', sans-serif;
-$standard-font-Urbanis-sans-serif:'Urbanist', sans-serif;
-
+$standard-font-Outfit-sans-serif: 'Outfit', sans-serif;
+$standard-font-Urbanis-sans-serif: 'Urbanist', sans-serif;
 
 //TODO color palette ( RGB )
 $standard-color-black: rgba(0, 0, 0);
+$standard-color-beige: #a0937d;
 $standard-color-blue: rgba(20, 33, 66, 1);
 $standard-color-blue-solid-grad: rgba(68, 195, 231, 0.13);
 $standard-color-blue-light: rgba(137, 171, 202, 0.4);
@@ -45,10 +45,7 @@ $standard-heigth-full-hd: 1080px;
 $standard-border-radius: 10px;
 $standard-space-between-elements: 19px;
 
-
 $standard-basic-heith-home: 1080px;
-
-
 
 //===============================
 
