--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -6,7 +6,7 @@
     padding-top: 20px;
 
     .foro_posts_container {
-        background-color: red;
+        //background-color: red;
         padding: 20px;
         width: 700px;
         height: 100vh;
