--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -16,6 +16,7 @@
 @import './components/modalCart/modalCart';
 @import './components/Foro/foro_Home/foro_Home';
 @import './components/Foro/foro_card/foro_card';
+@import './components/Foro/foro_createCard/foro_createCard';
 
 //! Detail
 @import './components/Detail/detail';
