--- a/client/src/styles/components/Detail/_detail.scss
+++ b/client/src/styles/components/Detail/_detail.scss
@@ -1,22 +1,31 @@
 .detail-contain {
   font-size: 30px;
   margin-top: $standard-space-between-elements;
-  background-color: $standard-color-white-background;
+  //background-color: $standard-color-white-background;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: $standard-space-between-elements;
+
+  @media only screen and (max-width: $medium-screen) {}
+
   .info-pincipal-detail {
-    height: $standard-heigth-full-hd * 0.7;
-    width: 100%;
+    height: 70vh;
+  
     display: flex;
     align-items: center;
     justify-content: center;
     gap: $standard-space-between-elements;
+    background-color: red;
+
+    @media only screen and (max-width: $medium-screen) {
+      height: 80vh;
+      width: 90%;
+    }
 
     .land-images {
-      height: 90%;
+      height: 95%;
       width: 10%;
       display: flex;
       flex-direction: column;
@@ -24,25 +33,30 @@
       justify-content: space-evenly;
       border-radius: $standard-border-radius;
       gap: $standard-space-between-elements;
-      margin-top: -76px;
+      background-color: aqua;
+
       .secondary-images {
         height: 17%;
         width: 80%;
         cursor: pointer;
-        background: #e0e0e0;
+        //background: #e0e0e0;
         border-radius: $standard-border-radius;
-        box-shadow: 14px 14px 17px #8b8b8b, -14px -14px 17px #ffffff;
+        //box-shadow: 2px 2px 7px #8b8b8b;
+
         img {
           border-radius: $standard-border-radius;
           width: 100%;
           height: 100%;
           object-fit: cover;
-          border: 1px solid $standard-color-blue;
+          border: 1px solid $standard-color-blue-light;
+          transition: all 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+          &:hover {
+            border-color: $standard-color-blue-secundary;
+            scale: 1.1;
+            transition: all 0.5s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+          }
         }
 
-        img:hover {
-          border-color: $standard-color-blue-secundary;
-        }
       }
     }
 
@@ -52,74 +66,64 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      background-color: blue;
+
       .principal-image {
         height: 95%;
-        width: 95%;
+        max-width: 75%;
         border-radius: $standard-border-radius;
-        background: #e0e0e0;
-        box-shadow: 14px 14px 17px #8b8b8b, -14px -14px 17px #ffffff;
-
+        // background: #e0e0e0;
+        // box-shadow: 14px 14px 17px #8b8b8b;
+        
         img {
           width: 100%;
           height: 100%;
           border-radius: $standard-border-radius;
+          transition: all 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
         }
       }
     }
 
     .principal-details {
-      height: 100%;
+      height: 95%;
       width: 30%;
       border-radius: $standard-border-radius;
       display: flex;
       flex-direction: column;
       justify-content: start;
       align-items: center;
-      gap: $standard-space-between-elements;
+      gap: 10px;
+      //background-color: yellow;
+
       .character-details {
         display: flex;
         flex-direction: column;
-        height: 75%;
+        justify-content: space-between;
+        align-items: center;
+        height: 45%;
         width: 100%;
+        font-size: 1.1vw;
         background-color: $standard-color-blue-light;
         border-radius: $standard-border-radius;
-        .product-detail {
-          padding: 15px;
-          margin: 10px;
-        }
-        .product-brand {
-          padding: 10px;
-          margin: 10px;
-        }
 
-        .product-description {
-          padding: 15px;
-          margin: 10px;
-        }
       }
+
       .transaction-details {
-        height: 23%;
+        height: 50%;
         width: 100%;
         background-color: $standard-color-blue-light;
         border-radius: $standard-border-radius;
-        .price_rating {
-          display: flex;
-          justify-content: center;
-        }
-        .transaction-price {
-          padding: 15px;
-          margin: 10px;
-        }
-        .product-rating {
-          padding: 10px;
-          margin: 10px;
-        }
+        display: flex;
       }
     }
   }
+
+  //!---------------------------------------------
+
   .section-description {
     width: 100%;
     height: 300px;
+
     //background-color: forestgreen;
     .detail-detail {
       display: flex;
@@ -128,17 +132,20 @@
       height: 100%;
       background-color: $standard-color-blue-light;
       border-radius: $standard-border-radius;
+
       .detail_product-name {
         width: 100%;
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
       }
+
       .releated-images {
         width: 15%;
         height: 60%;
         border-radius: $standard-border-radius;
         font-size: 15px;
+
         img {
           border-radius: $standard-border-radius;
           width: 100%;
@@ -148,6 +155,7 @@
       }
     }
   }
+
   .comments-section {
     height: 500px;
     width: $standard-with-full-hd;
@@ -155,12 +163,14 @@
     align-items: center;
     justify-content: center;
     gap: $standard-space-between-elements;
+
     .comments-box {
       width: 70%;
       height: 100%;
       background-color: $standard-color-blue-light;
       border-radius: $standard-border-radius;
     }
+
     .other-box {
       width: 26%;
       height: 100%;
