--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -17,8 +17,12 @@
 @import './components/Detail/detail';
 //! FilterPanel
 @import './components/FilterPanel/filterPanel';
+//! NewFilterPanel
+@import './components/FilterPanel/filterPanel2';
 //! FilterBy
 @import './components/FilterBy/filterBy';
+//! NewFilterBy
+@import './components/FilterBy/newFilterBy';
 //! FilterList
 @import './components/FilterList/filterList';
 //! ItemFilter
@@ -33,3 +37,11 @@
 @import './components//breadCrumb'; // screens
 //! Shop
 @import './components/Shop/shop';
+//! FilterByRating
+@import './components/FilterRating/filterRating';
+//! FilterPrice
+@import './components/FilterPrice/filterPrice';
+//! NewFilterName
+@import './components/FilterName/filterName';
+//! NewFilterCategory
+@import './components/FilterCategory/filterCategory';
