--- a/client/src/styles/components/Card2/_card2.scss
+++ b/client/src/styles/components/Card2/_card2.scss
@@ -9,22 +9,12 @@
   background-color: $standard-color-blue-light;
 
   @media only screen and (max-width: $medium-screen) {
-    gap: 50px;
-    justify-content: center;
-    //background-color: aqua;
-  }
-
-  @media only screen and (max-width: 1030px) {
-    gap: 20px;
-    justify-content: center;
-    //background-color: aqua;
+    width: 84%;
   }
 
   @media only screen and (max-width: $small-screen) {
-    height: auto;
-    overflow-x: scroll;
-    align-items: center;
-    justify-content: center;
+    //background-color: red;
+    width: 90%;
   }
 
   .container-card-beta {
@@ -46,315 +36,353 @@
     justify-items: center;
     // background-color: $standard-color-blue-light;
 
-    //background-color: red;
+    //background-color: blue;
+
+    @media only screen and (max-width: 1670px) {
+      gap: 50px;
+      justify-content: center;
+      //background-color: aqua;
+    }
 
     @media only screen and (max-width: $medium-screen) {
-      width: 12vw;
-      height: 15vw;
+      gap: 50px;
+      justify-content: center;
+      //background-color: aqua;
+    }
+
+    @media only screen and (max-width: 1030px) {
+      gap: 20px;
+      justify-content: center;
+      //background-color: aqua;
     }
 
     @media only screen and (max-width: $small-screen) {
-      width: 85vw;
-      height: 80vw;
-    }
-
-    .header-card-beta {
-      width: 100%;
-      height: 10%;
-      //background-color: green;
-
-      @media only screen and (max-width: $medium-screen) {
-        height: 15%;
-      }
-      @media only screen and (max-width: $small-screen) {
-      }
-    }
-
-    .content-image-card-beta {
-      width: 100%;
-      height: 45%;
-      display: flex;
+      height: auto;
+      overflow-x: scroll;
       align-items: center;
       justify-content: center;
-      //background-color: yellow;
-
-      @media only screen and (max-width: $medium-screen) {
-        width: 50%;
-        height: 60%;
-        justify-content: flex-start;
-      }
-      @media only screen and (max-width: $small-screen) {
-        width: 60%;
-        height: 60%;
-      }
-
-      .link-image-card {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // background-color: brown;
-
-        @media only screen and (max-width: $medium-screen) {
-          justify-content: center;
-          width: 100%;
-        }
-
-        @media only screen and (max-width: $small-screen) {
-          justify-content: center;
-          width: 100%;
-        }
-
-        .image-card {
-          max-width: 100%;
-          max-height: 95%;
-          border-radius: 3px;
-          @media only screen and (max-width: $medium-screen) {
-            max-width: 100%;
-          }
-          @media only screen and (max-width: $small-screen) {
-            max-width: 100%;
-            max-height: 100%;
-          }
-        }
-      }
     }
 
-    .content-title-description-card-beta {
-      width: 100%;
-      height: 20%;
-      //background-color: aqua;
+    .product-card-beta {
+      width: 12.5%;
+      width: 10vw;
+      height: 40%;
+      height: 15vw;
+      background-color: $standard-color-white;
+      box-shadow: 5px 5px 10px 1px $standard-color-blue-light; //!
+      border-radius: 15px 5px 15px 20px;
+      padding: 1vw;
+
+      //background-color: red;
 
       @media only screen and (max-width: $medium-screen) {
-        height: 20%;
-      }
-      @media only screen and (max-width: $small-screen) {
-        height: auto;
+        width: 12vw;
+        height: 15vw;
       }
 
-      .content-title-card-beta {
-        height: 40%;
+      @media only screen and (max-width: $small-screen) {
+        width: 85vw;
+        height: 80vw;
+      }
+
+      .header-card-beta {
         width: 100%;
+        height: 10%;
+        //background-color: green;
+
+        @media only screen and (max-width: $medium-screen) {
+          height: 15%;
+        }
+        @media only screen and (max-width: $small-screen) {
+        }
+      }
+
+      .content-image-card-beta {
+        width: 100%;
+        height: 45%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        //background-color: yellow;
+
+        @media only screen and (max-width: $medium-screen) {
+          width: 50%;
+          height: 60%;
+          justify-content: flex-start;
+        }
+        @media only screen and (max-width: $small-screen) {
+          width: 60%;
+          height: 60%;
+        }
+
+        .link-image-card {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          // background-color: brown;
+
+          @media only screen and (max-width: $medium-screen) {
+            justify-content: center;
+            width: 100%;
+          }
+
+          @media only screen and (max-width: $small-screen) {
+            justify-content: center;
+            width: 100%;
+          }
+
+          .image-card {
+            max-width: 100%;
+            max-height: 95%;
+            border-radius: 3px;
+            @media only screen and (max-width: $medium-screen) {
+              max-width: 100%;
+            }
+            @media only screen and (max-width: $small-screen) {
+              max-width: 100%;
+              max-height: 100%;
+            }
+          }
+        }
+      }
+
+      .content-title-description-card-beta {
+        width: 100%;
+        height: 20%;
+        //background-color: aqua;
+
+        @media only screen and (max-width: $medium-screen) {
+          height: 20%;
+        }
+        @media only screen and (max-width: $small-screen) {
+          height: auto;
+        }
+
+        .content-title-card-beta {
+          height: 40%;
+          width: 100%;
+          display: flex;
+          align-items: center;
+          padding-left: 2%;
+          font-size: 0.55vw;
+          //background-color: violet;
+
+          @media only screen and (max-width: $medium-screen) {
+            height: 80%;
+            width: 100%;
+            align-items: center;
+          }
+          @media only screen and (max-width: $small-screen) {
+          }
+
+          .product-name-card-beta {
+            font-family: $standard-font-Poiret-One;
+            font-weight: 600;
+            color: $standard-color-blue;
+
+            @media only screen and (max-width: $medium-screen) {
+              font-size: 0.8vw;
+              font-weight: 900;
+              //position: relative;
+              //top: 80%;
+              //background-color: black;
+            }
+            @media only screen and (max-width: $small-screen) {
+              //background-color: yellowgreen;
+              font-size: 4vw;
+              position: relative;
+              left: 8%;
+            }
+          }
+        }
+
+        .content-description-card-beta {
+          height: 60%;
+          padding-top: 3%;
+          font-size: 0.4vw;
+          font-family: $standard-font-IBM-Plex-Sans-Arabic;
+          font-weight: 400;
+
+          @media only screen and (max-width: $medium-screen) {
+            display: none;
+          }
+          @media only screen and (max-width: $small-screen) {
+            // display: flex;
+            // height: auto;
+          }
+
+          //background-color: aliceblue;
+          .product-description-card-beta {
+            height: 100%;
+            width: 100%;
+            padding-left: 3%;
+            //background-color: orange;
+            @media only screen and (max-width: $small-screen) {
+              font-size: 3vw;
+              font-family: $standard-font-Lexend-Deca-sans-serif;
+            }
+          }
+        }
+      }
+
+      .content-value-rating-card-beta {
+        width: 100%;
+        height: 12%;
         display: flex;
         align-items: center;
         padding-left: 2%;
-        font-size: 0.55vw;
-        //background-color: violet;
+        gap: 1%;
+        //background-color: yellowgreen;
 
         @media only screen and (max-width: $medium-screen) {
-          height: 80%;
-          width: 100%;
-          align-items: center;
+          width: 45%;
+          height: 60%;
+          flex-direction: column;
+          position: relative;
+          left: 55%;
+          bottom: 80%;
         }
         @media only screen and (max-width: $small-screen) {
+          align-items: flex-end;
+          left: 60%;
+          width: 40%;
+          bottom: 66%;
+          //background-color: powderblue;
         }
 
-        .product-name-card-beta {
-          font-family: $standard-font-Poiret-One;
-          font-weight: 600;
-          color: $standard-color-blue;
+        .content-rating-card-beta {
+          height: 100%;
+          width: 48%;
+          display: flex;
+          align-items: flex-start;
+          //background-color: greenyellow;
 
           @media only screen and (max-width: $medium-screen) {
-            font-size: 0.8vw;
-            font-weight: 900;
-            //position: relative;
-            //top: 80%;
-            //background-color: black;
-          }
-          @media only screen and (max-width: $small-screen) {
-            //background-color: yellowgreen;
-            font-size: 4vw;
+            height: 13%;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
             position: relative;
-            left: 8%;
+            right: 50%;
+            bottom: 10%;
+            scale: 1.2;
+            //background-color: aqua;
+          }
+          @media only screen and (max-width: $small-screen) {
+            scale: 1;
+            top: 0%;
+            left: 0%;
+            height: 50%;
+          }
+
+          img {
+            padding-top: 4%;
+            width: 17%;
           }
         }
-      }
 
-      .content-description-card-beta {
-        height: 60%;
-        padding-top: 3%;
-        font-size: 0.4vw;
-        font-family: $standard-font-IBM-Plex-Sans-Arabic;
-        font-weight: 400;
-
-        @media only screen and (max-width: $medium-screen) {
-          display: none;
-        }
-        @media only screen and (max-width: $small-screen) {
-          // display: flex;
-          // height: auto;
-        }
-
-        //background-color: aliceblue;
-        .product-description-card-beta {
+        .content-value-card-beta {
           height: 100%;
-          width: 100%;
-          padding-left: 3%;
-          //background-color: orange;
+          width: 50%;
+          display: flex;
+          align-items: flex-end;
+          justify-content: flex-end;
+          padding-right: 2%;
+          background-color: $standard-color-white;
+
+          @media only screen and (max-width: $medium-screen) {
+            width: 100%;
+          }
           @media only screen and (max-width: $small-screen) {
-            font-size: 3vw;
+            height: 50%;
+          }
+
+          .price2 {
+            color: $standard-color-black-ligth;
             font-family: $standard-font-Lexend-Deca-sans-serif;
+            font-family: $standard-font-Outfit-sans-serif;
+            font-weight: 600;
+
+            @media only screen and (max-width: $medium-screen) {
+              font-size: 0.88vw;
+            }
+            @media only screen and (max-width: $small-screen) {
+              font-size: 6vw;
+              font-weight: 300;
+            }
           }
         }
       }
-    }
 
-    .content-value-rating-card-beta {
-      width: 100%;
-      height: 12%;
-      display: flex;
-      align-items: center;
-      padding-left: 2%;
-      gap: 1%;
-      //background-color: yellowgreen;
-
-      @media only screen and (max-width: $medium-screen) {
-        width: 45%;
-        height: 60%;
-        flex-direction: column;
-        position: relative;
-        left: 55%;
-        bottom: 80%;
-      }
-      @media only screen and (max-width: $small-screen) {
-        align-items: flex-end;
-        left: 60%;
-        width: 40%;
-        bottom: 66%;
-        //background-color: powderblue;
-      }
-
-      .content-rating-card-beta {
-        height: 100%;
-        width: 48%;
-        display: flex;
-        align-items: flex-start;
-        //background-color: greenyellow;
-
-        @media only screen and (max-width: $medium-screen) {
-          height: 13%;
-          justify-content: center;
-          align-items: center;
-          width: 100%;
-          position: relative;
-          right: 50%;
-          bottom: 10%;
-          scale: 1.2;
-          //background-color: aqua;
-        }
-        @media only screen and (max-width: $small-screen) {
-          scale: 1;
-          top: 0%;
-          left: 0%;
-          height: 50%;
-        }
-
-        img {
-          padding-top: 4%;
-          width: 17%;
-        }
-      }
-
-      .content-value-card-beta {
-        height: 100%;
-        width: 50%;
-        display: flex;
-        align-items: flex-end;
-        justify-content: flex-end;
-        padding-right: 2%;
-        background-color: $standard-color-white;
-
-        @media only screen and (max-width: $medium-screen) {
-          width: 100%;
-        }
-        @media only screen and (max-width: $small-screen) {
-          height: 50%;
-        }
-
-        .price2 {
-          color: $standard-color-black-ligth;
-          font-family: $standard-font-Lexend-Deca-sans-serif;
-          font-family: $standard-font-Outfit-sans-serif;
-          font-weight: 600;
-
-          @media only screen and (max-width: $medium-screen) {
-            font-size: 0.88vw;
-          }
-          @media only screen and (max-width: $small-screen) {
-            font-size: 6vw;
-            font-weight: 300;
-          }
-        }
-      }
-    }
-
-    .content-add-car-card-beta {
-      height: 13%;
-      width: 100%;
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      //background-color: purple;
-
-      @media only screen and (max-width: $medium-screen) {
-        position: relative;
-        bottom: 70%;
+      .content-add-car-card-beta {
+        height: 13%;
         width: 100%;
-        right: 0%;
-        height: 15%;
-      }
-      @media only screen and (max-width: $small-screen) {
-        bottom: 63%;
-      }
-
-      .add-car-card-beta {
-        height: 90%;
-        width: 95%;
-        border-radius: 20px;
-        background-color: $standard-color-blue;
-        transition: background-color 0.3s;
+        margin-top: 10px;
         display: flex;
-        align-items: center;
         justify-content: center;
-        cursor: pointer;
-        //background-color: aqua;
+        align-items: center;
+        //background-color: purple;
+
         @media only screen and (max-width: $medium-screen) {
-          width: 85%;
-          height: 80%;
           position: relative;
-          bottom: 5%;
+          bottom: 70%;
+          width: 100%;
+          right: 0%;
+          height: 15%;
         }
         @media only screen and (max-width: $small-screen) {
-          top: 1%;
+          bottom: 63%;
         }
 
-        &:hover {
-          background-color: $standard-color-blue-green;
-        }
-
-        p {
-          height: 100%;
-          width: 100%;
-          font-size: 1vw;
-          font-family: $standard-font-Urbanis-sans-serif;
-          color: $standard-color-white;
-          font-weight: 500;
-          display: inline-block;
-          text-align: center;
-          vertical-align: middle;
-          padding-top: 1%;
-          // background-color: red;
-
+        .add-car-card-beta {
+          height: 90%;
+          width: 95%;
+          border-radius: 20px;
+          background-color: $standard-color-blue;
+          transition: background-color 0.3s;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          cursor: pointer;
+          //background-color: aqua;
           @media only screen and (max-width: $medium-screen) {
-            font-size: 0.8vw;
+            width: 85%;
+            height: 80%;
             position: relative;
-            width: auto;
-            height: auto;
+            bottom: 5%;
           }
           @media only screen and (max-width: $small-screen) {
-            font-size: 6vw;
+            top: 1%;
+          }
+
+          &:hover {
+            background-color: $standard-color-blue-green;
+          }
+
+          p {
+            height: 100%;
+            width: 100%;
+            font-size: 1vw;
+            font-family: $standard-font-Urbanis-sans-serif;
+            color: $standard-color-white;
+            font-weight: 500;
+            display: inline-block;
+            text-align: center;
+            vertical-align: middle;
+            padding-top: 1%;
+            // background-color: red;
+
+            @media only screen and (max-width: $medium-screen) {
+              font-size: 0.8vw;
+              position: relative;
+              width: auto;
+              height: auto;
+            }
+            @media only screen and (max-width: $small-screen) {
+              font-size: 6vw;
+            }
           }
         }
       }
