style(forum): :lipstick: fix bugs styles foro

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -79,5 +79,7 @@ $standard-basic-heith-home: 1080px;
 // $standard-space-between-elements: 19px;
 $navbar-height: 70px;
 $footer-height: 70px;
+$navbar-height-maring-top: 10px;
+$navbar-height-maring-button: 12px;
 $filterPanel-width: 300px;
 $filterFilt-height: 400px;
