--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -131,6 +131,6 @@
     .foro_menuTags_container {
         min-width: 300px;
         height: 350px;
-        background-color: green;
+        margin-top:24px;
     }
 }
